cmake_minimum_required(VERSION 3.2)
project(test_bayesian_network)
include_directories(include)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-DSRC_DIRECTORY=${CMAKE_SOURCE_DIR}")
if(APPLE)
  link_directories(lib/darwin)
  set(htd "libhtd.0.dylib")
endif(APPLE)

if(UNIX AND NOT APPLE)
  link_directories(lib/linux)
  set(htd "libhtd.so")
endif(UNIX AND NOT APPLE)

set(gtest_main "libgtest_main.a")
set(gtest "libgtest.a")
set(gmock "libgmock.a")
set(gmock_main "libgmock_main.a")

include_directories(include)
file(GLOB TEST_BAYESIAN_NETWORK_SRC_FILES "src/*.cpp")
file(GLOB TEST_BAYESIAN_NETWORK_TEST_SRC_FILES "test/*.cpp")
add_library(test_bayesian_network ${TEST_BAYESIAN_NETWORK_SRC_FILES})
add_executable(tbn_test ${TEST_BAYESIAN_NETWORK_TEST_SRC_FILES})
add_executable(tbn_compiler "compile_tbn.cpp")
target_link_libraries(tbn_test test_bayesian_network ${htd} ${gtest} ${gtest_main} ${gmock} ${gmock_main} pthread)
target_link_libraries(tbn_compiler test_bayesian_network ${htd})

